k8s/fastapi-deployment.yaml
# FastAPI Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment

spec:
  # FastAPI Pod 2개 실행
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
        - name: fastapi
          # 기존 GitHub Actions에서 ECR에 Push한 이미지
          image: 925047940866.dkr.ecr.ap-northeast-1.amazonaws.com/std01-fastapi:latest

          ports:
            - containerPort: 8000
