k8s/fastapi-service.yaml
# FastAPI Service
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  annotations:
    # ALB가 FastAPI 상태 확인 시 사용할 경로
    alb.ingress.kubernetes.io/healthcheck-path: /api/health

spec:
  selector:
    app: fastapi

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
